--- a/index.html
+++ b/index.html
@@ -283,6 +283,12 @@ $('#sendMe').click(function () {
         <div id='popUp'>
             Кликни по мне - я и закроюсь :-)
         </div>
+        <pre>
+            <code>
+git branch --track develop master                
+git checkout develop                
+            </code>
+        </pre>
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
         <script src='js.js'></script>
