--- a/index.html
+++ b/index.html
@@ -286,7 +286,10 @@ $('#sendMe').click(function () {
         <pre>
             <code>
 git branch --track develop master                
-git checkout develop                
+git checkout develop
+git commit -m "Changes"
+
+
             </code>
         </pre>
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
