--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <body>
         <div class="content">
             <h1>1. PHP</h1>
+            <p>
+                Мне несколько непонятно задание, связанное с подстановкой текста, по этому я сейчас его не реализую и готов доделать отдельно, после уточнения.
+                Вопросы в письме.
+            </p>
             <input type="text" placeholder="Введите URL для загрузки" id="downloadMe"/>
             <input type="button" value="Погнали!" id="downloadMeSend"/>
             <pre>
