--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <p id="currPressValue"></p>
             <p id="debugValues"></p>
         </div>
-        <div class="atmosphere"><div id="balloonDiv"></div></div>
+        <div class="atmosphere">
+            <div id="balloonDiv"></div>
+        </div>
         <script src="js/atmosphere.js"></script>
         <script src="js/balloon.js"></script>
         <script src="js/app.js"></script>
