Откат от Цезиума

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <p id="currPressValue"></p>
             <p id="debugValues"></p>
         </div>
-        <div class="atmosphere" id="cesiumContainer"></div>
-        <div id="balloonDiv"></div>
+        <div class="atmosphere" id="cesiumContainer"><div id="balloonDiv"></div></div>
+        
         <script src="Cesium/Cesium.js"></script>
         <script src="js/atmosphere.js"></script>
         <script src="js/balloon.js"></script>
