--- a/index.html
+++ b/index.html
@@ -4,54 +4,95 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
-    <title>Aerostat simualator</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Roman Sorokin - web-developer</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 </head>
-
 <body>
-    <div class="control">
-        <p class="info">Нажмите на кнопку "Горелка", чтобы начать нагревать воздушный шар.</p>
-        <p class="info">Укажите слайдером нужную высоту в метрах, чтобы включился автопилот и шар начал стремиться к этой высоте и поддерживать ее.</p>
-        <p class="info">Для отключения автопилота, просто нажмите один раз ра кнопку "Горелка" и управляйте вручную.</p>
+    <div class="page">
+        <aside class="aside">
+            <h1>Роман Сорокин</h1>
+            <img class="aside__photo" src="img/roman_sorokin.jpg">
+            <h2>Web-разработчик</h2>
+            <h4>Контакты</h4>
+            <ul>
+                <li>Телеграмм: <a href="https://t.me/r1000ru">@r1000ru</a></li>
+                <li>Vk.com: <a href="https://vk.com/r1000ru">r1000ru</a></li>
+            </ul>
+        </aside>
+        <main class="main">
+            <h2>Opensource-проекты</h2>
+            <h3>Консольный клиент для Nats</h3>
+            <p>
+                Брокер запросов и сообщений <a href="https://nats.io">Nats</a> - показал себя отличным инструментом как для организации Pub/Sub взаимодействия, 
+                так и для организации связи между микросервисами. Для тестов и отправки/приема отладочной информации, мною написан консольный клиент 
+                <a href="https://github.com/r1000ru/nats-cli">nats-cli</a>. Его основные возможности:
+            </p>
+            <ul>
+                <li>Отправка запросов в канал и получение ответов</li>
+                <li>Прослушивание канала на предмет запросов и отправка ответов в канал отправителя запроса</li>
+                <li>Подписка на канал</li>
+                <li>Публикация сообщений в канал</li>
+            </ul>
+            <p>
+                Клиент написан на NodeJS и требует чтобы она была установлена на компьютере пользователя. Для использования клиента, достаточно один раз установить :
+                его глобально:
+            </p>
+            <pre>npm install -g git+https://github.com/r1000ru/nats-cli</pre>
+            <p>
+                После установки, для его запуска достаточно выполнить команду:
+            </p>
+            <pre>nats-cli -h 127.0.0.1 -p 4222</pre>
+            <p>
+                Приведенные выше хост и порт - указывать не обязательно, они выставлены по умолчанию. Ключи хоста и порта следует использовать только в том случае, если они отличны от дефолтных.
+            </p>
+            <!--<h3>Сервер для создания API на NodeJS</h3>-->
+            <h3>Валидатор входящих параметров</h3>
+            <p>
+                <a href="https://github.com/r1000ru/params-validator">Модуль</a> предназначен для обработки данных, приходящих на API-сервер. Важное качество - ориентирован на клиенты, которые работают с типизированными языками (не позволяет строке присвоить False и т.п.)
+                Поддерживает проверку следующих типов данных (для каждой проверки можно указать отдельно, обязательность и возможность Null`а):
+            </p>
+            <ul>
+                <li>Строки, с проверкой длины</li>
+                <li>Чисел, с проверкой лимитов значений</li>
+                <li>Булевый тип</li>
+                <li>Списки - значение должно быть одним из перечисленных</li>
+                <li>Массив, с проверкой размерности и типа передаваемых данных</li>
+                <li>Объекта, с проверкой типа каждого свойства</li>
+            </ul>
+            <pre>
+const PV = require('params-validator');
 
-        <input type="range" min="0" max="10000" id="heightSlider" value="0">
-        <p id="controlValue">Ручное управление. Горелка выключена.</p>
-        <input type="button" value="Горелка" id="fireButton" />
-        <p id="dataHeight"></p>
-        <p id="currPressValue"></p>
-        <p id="dataSpeed"></p>
-        <p id="dataAccelerate"></p>
-        <p id="dataPassengerWeight"></p>
-        <p id="dataBalloonWeight"></p>
-        <p id="dataTotalWeight"></p>
+let inputParams = {
+    title: 'ParamsValidator',
+    version: 1,
+    inProduction: false,
+    is_support: 'num'
+}
 
-        <p id="dataBalloonSquare"></p>
-        <p id="dataBalloonVolume"></p>
-        <p id="dataAirTemp"></p>
-        <p id="dataFUp"></p>
-        <p id="dataFDown"></p>
-        <p id="dataFCx"></p>
-        <p id="dataFTotal"></p>
+let checker = PV.obj(true, false {      // Объект, обязателелен, не может быть NULL
+    title: PV.str(true, true, 1, 64),  // Строка, обязательна, может быть NULL, от 1 до 64 символов
+    version: PV.num(false, false, 1),   // Число, не обязательно, не менее 1-го
+    inProduction: PV.bool(true, false),  // Булевый параметр, обязателен, не может быть NULL
+    is_support: PV.enum(false, false, ['str','num','arr','obj','bool','enum'])  // Одно из возможных значений, не обязательно, не может быть NULL
+})
+
+var checkedParams;
+
+try {
+    checkedParams = validator.check(inputParams);
+} catch (e) {
+    console.log('Error: ' + e.message);
+    return;
+}
+
+console.log(checkedParams);
+            </pre>
+
+
+        </main>
     </div>
-    <div class="atmosphere" id="cesiumContainer">
-        <div id="balloonDiv"></div>
-    </div>
-
-    <script src="js/atmosphere.js"></script>
-    <script src="js/balloon.js"></script>
-    <script src="js/app.js"></script>
-    <script>
-        var radius = 8; // Радиус воздушного шара для класса FAI АХ-8
-        var weight = 230 + 45; // Масса шара (с оболочкой) + полезная нагрузка
-        var tempMaxC = 120; // Максимальная температура воздуха в оболочке, после чего сработает ограничитель, в градусах Цельсия
-        var tempC = 15; // Температура атмосферы на уровне моря в градусах цельсия
-
-        var app = new App(radius, weight, tempMaxC, tempC);
-        app.init();
-    </script>
 </body>
-
 </html>
